--- a/doc/README.rdoc
+++ b/doc/README.rdoc
@@ -1,5 +1,3 @@
-$Id$ -*-text-*-
-
 = About
 
 bwkfanboy is a HTML to Atom feed converter that you can use to watch
@@ -73,16 +71,18 @@ So, without the wrapper all this together looks like:
 == Log
 
 All utils write to <tt>/tmp/bwkfanboy/USER/log/general.log</tt> file if
-the permissions allows it.
+permissions allows it.
 
 == HTTP
 
-There are 2 method to get an Atom feed by HTTP.
+There are 2 method to get an Atom feed via HTTP:
 
-1. You can copy <tt>web/bwkfanboy.cgi</tt> (from the program tarball) to
-   your Apache cgi directory and run it, but this disallows you from
-   using your HOME directory for your own plugins.
+1. <tt>web/bwkfanboy.cgi</tt> (from the program tarball), which you may
+   copy to your Apache cgi directory and run it. This prohibits you from
+   using HOME directory for your own plugins. Also the cgi script
+   requires some manual editing (setting 1 variable in it) before even
+   you can start utilizing it.
 
-2. Use small *bwkfanboy_server* HTTP server. If can run from any user
-   and thus is able to inherit env variables for discovering your HOME
+2. Small *bwkfanboy_server* HTTP server. It can run from any user and
+   thus is able to inherit env variables for discovering your HOME
    directory. Read bin/bwkfanboy_server to know how to operate it.
