--- a/doc/plugin.rdoc
+++ b/doc/plugin.rdoc
@@ -102,28 +102,28 @@ HTML you want to parse. The general idea:
 
 === Options
 
-Plugins can have _options_ which user should provide to the plugin in
-the real-time. For example, say you're scraping a site where many users
-are wasting their time. If you want to watch for several of them it is
-silly to write a new plugin every time for a new participant. Instead,
-you can write 1 plugin which have an _option_ to take a parameter (a
-user name, in this case).
+Plugins can have _options_ and a user should provide then to the plugin
+in the real-time. For example, say you're scraping a site where many
+users are wasting their time. If you want to watch for several of them
+it is silly to write a new plugin every time for a new
+participant. Instead, you can write 1 plugin which have an _option_ to
+take a parameter (a user name, in this case).
 
-Options (if any) are always accessible via \#opt method which is just
-attr_reader of a hash.
+Options (if any) are always accessible via \#opt method which is just an
+attr_reader of an array.
 
-The really interesting trick one can to play with Meta::URI constant. It
-is possible to make it dynamic, for example:
+One can play the really interesting trick with Meta::URI constant. It is
+possible to make it dynamic, for example:
 
   URI = 'http://www.quora.com/#{opt[0]}/answers'
 
-Then, if user will provide 1 option (say 'Mark-Suster')--it will appear
-in the final URI as follows:
+Then, if a user will provide 1 option (say 'Mark-Suster')--it will
+appear in the final URI as follows:
 
   http://www.quora.com/Mark-Suster/answers
 
-Such dynamic is possible only for Meta::URI constant and if it is not
-static, _option_ becomes mandatory for the end-user.
+Such dynamic is possible only for Meta::URI constant and in such case,
+_option_ becomes mandatory for the end-user.
 
 == How to test all this
 
