Updated quora plugin.

--- a/doc/README.rdoc
+++ b/doc/README.rdoc
@@ -7,6 +7,10 @@ The converter is not a magick tool: you'll need to write a plugin (in
 Ruby) for each site you want to watch. bwkfanboy provides guidelines and
 general assistance.
 
+(Plugins included with bwkfanboy are usually updated more frequently
+than the whole gem on rubygems.org, so grab the source before
+struggling).
+
 = Architecture
 
 == Plugins
@@ -86,3 +90,6 @@ There are 2 method to get an Atom feed via HTTP:
 2. Small *bwkfanboy_server* HTTP server. It can run from any user and
    thus is able to inherit env variables for discovering your HOME
    directory. Read bin/bwkfanboy_server to know how to operate it.
+
+= License
+:include: doc/LICENSE
