--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -2,6 +2,12 @@
 
 - See git log.
 
+=== 0.1.3
+
+- Updated Quora plugin.
+- Added '-V' command line option to all utils.
+- Updated tests.
+
 === 0.1.1
 
 - Plugins can have user-supplied options in realtime.
