--- a/doc/plugin.rdoc
+++ b/doc/plugin.rdoc
@@ -1,4 +1,4 @@
-= HOWTO Write a \Plugin
+= How to Write a \Plugin
 
 First of all, look at examples provided with bwkfanboy. They were
 intended to be 100% working because I was writing them for myself.
@@ -130,20 +130,20 @@ _option_ becomes mandatory for the end-user.
 To test how nice your plugin works, save the html page to the file
 and type:
 
-  % bwkfanboy_parse -vv path/to/a/plugin.rb < saved_page.html
+  % bwkfanboy_parse -vv /path/to/a/plugin.rb < saved_page.html
 
 to see the result as in plain text, or
 
-  % bwkfanboy_parse -v path/to/a/plugin.rb < saved_page.html
+  % bwkfanboy_parse -v /path/to/a/plugin.rb < saved_page.html
 
 as pretty JSON.
 
 For option-enabled plugins, supply additional parameters for them after
 the plugin path:
 
-  % bwkfanboy_parse -vv path/to/a/plugin.rb \
+  % bwkfanboy_parse -vv /path/to/the/plugin.rb \
     option_1 "options 2" < saved_page.html
 
 <tt>bwkfanboy_parse</tt> return 0 if no errors occurred or >= 1 if you
 have errors in your plugin code. N.B.: the output from
-<tt>bwkparser_parse</tt> is always in UTF-8.
+<tt>bwkparser_parse</tt> *must* always be in UTF-8.
