--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -1,3 +1,7 @@
+=== 1.2.9
+
+- Reverted to rubygems 1.3.7 due to mysterious 1.5.0 behaviour.
+
 === 1.2.8
 
 - Updated quora plugin for nodejs 0.3.7.
