--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -1,3 +1,11 @@
+=== 1.3.0
+
+Thu Feb 10 11:17:57 EET 2011
+
+- A new plugin: articles form econlib.org.
+
+- (internal) Injected a small part of falsework's naive template.
+
 === 1.2.9
 
 - Reverted to rubygems 1.3.7 due to mysterious 1.5.0 behaviour.
