--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -1,3 +1,13 @@
+=== 1.3.1
+
+Thu Mar 17 17:19:52 EET 2011
+
+- Updated quora plugin.
+
+- Updated 1 test for jsonschema 2.0.1.
+
+- Updated the list of dependencies.
+
 === 1.3.0
 
 Thu Feb 10 11:17:57 EET 2011
