--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -1,3 +1,13 @@
+=== 1.3.2
+
+Mon Mar 28 12:13:31 EEST 2011
+
+- Fixed a small bug with an Atom feed for plugins with Meta::URI options.
+
+- Updated quora plugin (a rather useless operation, because from [insert
+  date] Quora provides its own answers-feed). This plugin will be
+  removed.
+
 === 1.3.1
 
 Thu Mar 17 17:19:52 EET 2011
