--- a/doc/NEWS.rdoc
+++ b/doc/NEWS.rdoc
@@ -1,3 +1,13 @@
+=== 1.4.0
+
+Wed Apr  6 23:45:39 EEST 2011
+
+- A new plugin: articles (per-user) from inc.com.
+
+- Removed quora plugin.
+
+- Fixed a but with '-t' command line option.
+
 === 1.3.2
 
 Mon Mar 28 12:13:31 EEST 2011
